--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,11 +17,11 @@ services:
     environment:
       KAFKA_CFG_NODE_ID: 0
       KAFKA_CFG_PROCESS_ROLES: 'controller,broker'
-      KAFKA_CFG_LISTENERS: 'BROKER://:9092,CONTROLLER://:9093'
-      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: 'BROKER:PLAINTEXT,CONTROLLER:PLAINTEXT'
+      KAFKA_CFG_LISTENERS: 'INTERNAL://:9092,CONTROLLER://:9093'
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT'
       KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: '0@kafka:9093'
       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
-      KAFKA_CFG_ADVERTISED_LISTENERS: 'BROKER://kafka:9092'
+      KAFKA_CFG_ADVERTISED_LISTENERS: 'INTERNAL://kafka:9092'
     healthcheck:
       test: ["CMD-SHELL", "kafka-broker-api-versions.sh --bootstrap-server kafka:9092 || exit 1"]
       interval: 15s
