--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,13 +15,17 @@ services:
     volumes:
       - kafka-data:/bitnami/kafka
     environment:
+      # Broker
       KAFKA_CFG_NODE_ID: 0
       KAFKA_CFG_PROCESS_ROLES: 'controller,broker'
-      KAFKA_CFG_LISTENERS: 'INTERNAL://:9092,CONTROLLER://:9093'
-      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT'
       KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: '0@kafka:9093'
+      # Listeners
+      KAFKA_CFG_LISTENERS: 'BROKER://:9092,CONTROLLER://:9093,INTERNAL://:9094'
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: 'BROKER:PLAINTEXT,CONTROLLER:PLAINTEXT,INTERNAL:PLAINTEXT'
+      KAFKA_CFG_INTER_BROKER_LISTENER_NAME: 'BROKER'
       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
-      KAFKA_CFG_ADVERTISED_LISTENERS: 'INTERNAL://kafka:9092'
+      KAFKA_CLIENT_LISTENER_NAME: 'INTERNAL'
+      KAFKA_CFG_ADVERTISED_LISTENERS: 'BROKER://kafka:9092,INTERNAL://kafka:9094'
     healthcheck:
       test: ["CMD-SHELL", "kafka-broker-api-versions.sh --bootstrap-server kafka:9092 || exit 1"]
       interval: 15s
@@ -37,7 +41,7 @@ services:
     environment:
       DYNAMIC_CONFIG_ENABLED: 'true'
       KAFKA_CLUSTERS_0_NAME: 'local'
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: 'kafka:9092'
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: 'kafka:9094'
     depends_on:
       kafka:
         condition: service_healthy
@@ -48,7 +52,7 @@ services:
     networks:
       - app-tier
     environment:
-      KAFKA_BROKERCONNECT: 'kafka:9092'
+      KAFKA_BROKERCONNECT: 'kafka:9094'
     depends_on:
       kafka:
         condition: service_healthy
